--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -8,13 +8,16 @@
   background: -webkit-linear-gradient(to right, rgba(196, 113, 245, 1), rgba(250, 113, 205, 1));
   background: linear-gradient(to right, rgba(196, 113, 245, 1), rgba(250, 113, 205, 1))
 }
+.logo {
+  font-family: 'Water Brush', cursive;
+}
 </style>
 <!-- Navbar -->
 <nav class="navbar navbar-expand-lg navbar-dark gradient-custom">
   <!-- Container wrapper -->
   <div class="container-fluid container">
     <!-- Navbar brand -->
-    <a class="navbar-brand" href="#">Navbar</a>
+    <a class="navbar-brand logo" href="#">ImgGen</a>
 
     <!-- Toggle button -->
     <button class="navbar-toggler" type="button" data-mdb-toggle="collapse"
@@ -45,7 +48,7 @@
           </a>
         </li>
         <li class="nav-item text-center mx-2 mx-lg-1">
-          <a class="nav-link disabled" aria-disabled="true" href="#!">
+          <a class="nav-link" aria-disabled="true" href="#!">
             <div>
               <i class="far fa-envelope fa-lg mb-1"></i>
               <span class="badge rounded-pill badge-notification bg-dark">11</span>
