--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -15,6 +15,7 @@
       </p>
     </div>
     <div class="flex flex-wrap -m-2">
+      {% for worker in workers %}
       <div class="p-2 lg:w-1/3 md:w-1/2 w-full">
         <div
           class="h-full flex items-center border-gray-200 border p-4 rounded-lg"
@@ -26,133 +27,16 @@
           />
           <div class="flex-grow">
             <h2 class="text-gray-900 title-font font-medium">
-              Holden Caulfield
+              {{ worker.name }}
             </h2>
-            <p class="text-gray-500">UI Designer</p>
+            <p class="text-gray-500 mt-1">{{ worker.last_name }}</p>
+            <p class="text-gray-500 mt-1">{{ worker.age }}</p>
+            <p class="text-gray-500 mt-1">{{ worker.profession }}</p>
           </div>
         </div>
       </div>
-      <div class="p-2 lg:w-1/3 md:w-1/2 w-full">
-        <div
-          class="h-full flex items-center border-gray-200 border p-4 rounded-lg"
-        >
-          <img
-            alt="team"
-            class="w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4"
-            src="https://dummyimage.com/84x84"
-          />
-          <div class="flex-grow">
-            <h2 class="text-gray-900 title-font font-medium">Henry Letham</h2>
-            <p class="text-gray-500">CTO</p>
-          </div>
-        </div>
-      </div>
-      <div class="p-2 lg:w-1/3 md:w-1/2 w-full">
-        <div
-          class="h-full flex items-center border-gray-200 border p-4 rounded-lg"
-        >
-          <img
-            alt="team"
-            class="w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4"
-            src="https://dummyimage.com/88x88"
-          />
-          <div class="flex-grow">
-            <h2 class="text-gray-900 title-font font-medium">Oskar Blinde</h2>
-            <p class="text-gray-500">Founder</p>
-          </div>
-        </div>
-      </div>
-      <div class="p-2 lg:w-1/3 md:w-1/2 w-full">
-        <div
-          class="h-full flex items-center border-gray-200 border p-4 rounded-lg"
-        >
-          <img
-            alt="team"
-            class="w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4"
-            src="https://dummyimage.com/90x90"
-          />
-          <div class="flex-grow">
-            <h2 class="text-gray-900 title-font font-medium">John Doe</h2>
-            <p class="text-gray-500">DevOps</p>
-          </div>
-        </div>
-      </div>
-      <div class="p-2 lg:w-1/3 md:w-1/2 w-full">
-        <div
-          class="h-full flex items-center border-gray-200 border p-4 rounded-lg"
-        >
-          <img
-            alt="team"
-            class="w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4"
-            src="https://dummyimage.com/94x94"
-          />
-          <div class="flex-grow">
-            <h2 class="text-gray-900 title-font font-medium">Martin Eden</h2>
-            <p class="text-gray-500">Software Engineer</p>
-          </div>
-        </div>
-      </div>
-      <div class="p-2 lg:w-1/3 md:w-1/2 w-full">
-        <div
-          class="h-full flex items-center border-gray-200 border p-4 rounded-lg"
-        >
-          <img
-            alt="team"
-            class="w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4"
-            src="https://dummyimage.com/98x98"
-          />
-          <div class="flex-grow">
-            <h2 class="text-gray-900 title-font font-medium">Boris Kitua</h2>
-            <p class="text-gray-500">UX Researcher</p>
-          </div>
-        </div>
-      </div>
-      <div class="p-2 lg:w-1/3 md:w-1/2 w-full">
-        <div
-          class="h-full flex items-center border-gray-200 border p-4 rounded-lg"
-        >
-          <img
-            alt="team"
-            class="w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4"
-            src="https://dummyimage.com/100x90"
-          />
-          <div class="flex-grow">
-            <h2 class="text-gray-900 title-font font-medium">Atticus Finch</h2>
-            <p class="text-gray-500">QA Engineer</p>
-          </div>
-        </div>
-      </div>
-      <div class="p-2 lg:w-1/3 md:w-1/2 w-full">
-        <div
-          class="h-full flex items-center border-gray-200 border p-4 rounded-lg"
-        >
-          <img
-            alt="team"
-            class="w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4"
-            src="https://dummyimage.com/104x94"
-          />
-          <div class="flex-grow">
-            <h2 class="text-gray-900 title-font font-medium">Alper Kamu</h2>
-            <p class="text-gray-500">System</p>
-          </div>
-        </div>
-      </div>
-      <div class="p-2 lg:w-1/3 md:w-1/2 w-full">
-        <div
-          class="h-full flex items-center border-gray-200 border p-4 rounded-lg"
-        >
-          <img
-            alt="team"
-            class="w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4"
-            src="https://dummyimage.com/108x98"
-          />
-          <div class="flex-grow">
-            <h2 class="text-gray-900 title-font font-medium">Rodrigo Monchi</h2>
-            <p class="text-gray-500">Product Manager</p>
-          </div>
-        </div>
+      {% endfor %}
       </div>
     </div>
-  </div>
 </section>
 {% endblock content %}
