--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -105,7 +105,7 @@
 
       <!-- Search form -->
       <form class="d-flex input-group w-auto ms-lg-3 my-3 my-lg-0">
-        <input type="search" class="form-control" placeholder="Search" aria-label="Search" />
+        <input name="q" type="search" class="form-control" placeholder="Search" aria-label="Search" />
         <button class="btn btn-outline-white" type="button" data-mdb-ripple-color="dark">
           Search
         </button>
