complete search lesson

--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -106,7 +106,7 @@
       <!-- Search form -->
       <form class="d-flex input-group w-auto ms-lg-3 my-3 my-lg-0">
         <input name="q" type="search" class="form-control" placeholder="Search" aria-label="Search" />
-        <button class="btn btn-primary" type="button" data-mdb-ripple-color="dark">
+        <button class="btn btn-primary" type="submit" data-mdb-ripple-color="dark">
           Search
         </button>
       </form>
